# axum-asset

./: Cargo.toml  Justfile  README.md
axum-asset/: Cargo.toml  README.md
axum-asset-derive/: Cargo.toml
axum-asset-derive/src/: ast.rs  codegen.rs  file.rs  lib.rs
axum-asset/src/: asset.rs  file.rs  lib.rs  util.rs
axum-asset/tests/: asset_tests.rs  caching_tests.rs  router_tests.rs
axum-asset/tests/common/: mod.rs
axum-asset/tests/static/: data.json  index.html  no-extension  script.js
axum-asset/tests/static/nested/deep/: file.txt
