[package]
name = "axum-asset-derive"
version = "0.1.0"
authors = ["Devashish Dixit <devashishdxt@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Macros for `axum-asset`: A crate for embedding static assets in your Axum application at compile time."
homepage = "https://github.com/devashishdxt/axum-asset"
repository = "https://github.com/devashishdxt/axum-asset"
categories = ["filesystem", "web-programming"]
keywords = ["static", "embed", "axum", "web", "server"]
edition = "2024"

[lib]
proc-macro = true

[dependencies]
hex.workspace = true
mime_guess.workspace = true
proc-macro2.workspace = true
quote.workspace = true
sha2.workspace = true
syn.workspace = true
walkdir.workspace = true
