[package]
name = "axum-asset"
version = "0.2.0"
authors = ["Devashish Dixit <devashishdxt@gmail.com>"]
license = "MIT/Apache-2.0"
description = "A crate for embedding static assets in your Axum application at compile time."
homepage = "https://github.com/devashishdxt/axum-asset"
repository = "https://github.com/devashishdxt/axum-asset"
categories = ["filesystem", "web-programming"]
keywords = ["static", "embed", "axum", "web", "server"]
edition = "2024"

[dependencies]
axum.workspace = true
axum-asset-derive.workspace = true
axum-extra.workspace = true

[dev-dependencies]
http-body-util.workspace = true
tokio.workspace = true
tower.workspace = true
